# emojifier

./: .gitignore  Cargo.toml  concat.txt
scripts/: cutter.py  lil_img_ops.py
src/: ffmpeg_cmds.rs  instruct.rs  instructions.rs  lil_videos.rs  main.rs  mosaic.rs  path.rs  quadrants.rs  scroll.rs  transpose.rs  zoom.rs  zoom_instruct.rs
