[package]
name = "emojifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
async-process = "1.5.0"
tokio = { version = "1.22.0", features = ["full"] }
rand = "0.8.4"
clap = { version = "4.0.32", features = ["derive"] }
#opencv = "0.73.0"
